# rb_photon_prod

./: .gitignore  Dockerfile  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
.docker/: Dockerfile  docker-compose.yaml
.github/workflows/: docker-publish.yml  main.yml
Plots/: plots.ipynb
Plots/data/: ideal_system_vst_pickle.pickle  optical_pumping_psi0=f1_d2
Source_Code/: General_Rb_Simulator.ipynb  Single_qubit_benchmarking.ipynb  atom_config.py  cavity.py  docker-image.yml  ham_sim_source.py  ketbra_config.py  vector_functions.py
run_correlation_calc/: run_correlation_calc.py  run_correlation_calc_cluster.py  run_n1_b_field_sweep.py  run_n1_bfield_det_sweep.py  run_n1_correlation_calc_single.py  run_n1_omeg_vst_shape_sweep.py  run_n1_omega_len_vst_sweep.py  run_n1_omega_rot_grid_sweep.py  run_n1_two_phot_det_sweep.py  run_n2_b_field_sweep.py  run_n2_correlation_single.py  run_n2_omega_early_omega_late_sweep.py  run_n2_omega_stirap_grid_sweep.py  run_n2_two_phot_det_sweep.py  run_n3_correlation_calc_single.py
saved_data_bursts/: plots.ipynb  source_benchmark.ipynb
saved_data_timebin/: MC_vstirap_analysis_different_pulses.ipynb  data_analysis_helper_functions.py  data_analysis_n=1_photons.ipynb  photon_decoherence_model.ipynb  photon_fidelity_analysis_n=2.ipynb  photon_fidelity_analysis_n=3.ipynb  power_det_scattering_contour_fardet.ipynb  rate_analysis.ipynb  vstirap_length_rata_analysis_MC.ipynb
src/: CQED_Rb_Simulator.ipynb  FarDetuned_Raman.ipynb  Photon_Correlation_Example_Calc_n1.ipynb  __init__.py
src/modules/: atom_config.py  (+13 more)
(+2846 files in other folders)
