[project]
name = "rb-simulator"
version = "0.1.0"
description = "Simulating cavity QED experiments with Rb atoms"
authors = [{name = "Jan Ole Ernst"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "qutip>=5.0.0",
    "numpy>=1.16",
    "scipy>=1.0",
    "matplotlib>=3.5.1",
    "notebook>=7.0.6",
    "sympy>=1.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/modules"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "black>=24.0.0",
    "ruff>=0.6.0",
]
